<resources>
    <string name="app_name">UglyDuckling</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="historyToday">History Today</string>
    <string name="nav_switch_theme">Day/Night Mode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="search">Search</string>
    <string name="express">Express</string>
    <string name="weather">Weather</string>

    <!--Settings-->
    <string name="notifications">Notifications</string>
    <string name="alert">Alert</string>
    <string name="alert_desc">Send notifications when packages get updated.</string>
    <string name="do_not_disturb_mode">Do not disturb mode</string>
    <string name="do_not_disturb_mode_desc">Don\'t send notifications during the hours set.</string>
    <string name="start_time">Start time</string>
    <string name="start_time_desc">23:00</string>
    <string name="end_time">End time</string>
    <string name="end_time_desc">06:00</string>
    <string name="notification_interval">Notification interval</string>
    <string name="browser">Browser</string>
    <string name="custom_tabs">Chrome custom tabs</string>
    <string name="custom_tabs_desc">Open links with Chrome Custom Tabs.</string>
    <string name="user_interface">User interface</string>
    <string name="navigation_bar_tint">Navigation bar tint</string>
    <string name="navigation_bar_tint_desc">Color the navigation bar.</string>
    <string name="navigation_bar_restart_msg">Changes will be applied after restarting app.</string>
    <string-array name="notification_interval">
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
    </string-array>
    <string-array name="notification_interval_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!--Settings end-->
    <!--add package-->
    <string name="scan_code">Scan code</string>
    <string name="tint_package_name">Name(Optional)</string>
    <string name="tint_package_number">Number</string>
    <string name="wrong_number_and_check">Invalid number, check it and retry.</string>
    <string name="require_permission">To support barcode scan, you need to grant camera permission.</string>
    <string name="package_name_default_pre">Package</string>
    <string name="package_exist">The package is in your list.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="error">Error</string>
    <string name="something_wrong">Something wrong…</string>
    <string name="unable_to_open_camera">Unable to open camera, please check it and try again later.</string>
    <!--add package end-->

    <!--package list page-->
    <string name="all">All</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="action_search">Search</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="share">Share</string>
    <string name="activity_add_package">Add Package</string>
    <string name="delete">Delete</string>
    <string name="copy_code">Copy code</string>
    <string name="set_unread">Set unread</string>
    <string name="set_read">Set read</string>
    <string name="remove">REMOVE</string>
    <string name="get_status_error">Unable to get the latest status.</string>
    <string name="network_error">Network error, try again later.</string>
    <string name="package_number_copied">Package number has been copied successfully.</string>
    <string name="package_update_success_newstatus">Refresh the success to get the latest logistics information</string>
    <string name="package_update_success_not_newstatus">Refresh success, no latest logistics information</string>
    <string name="package_removed_msg">has been removed.</string>
    <string name="undo">UNDO</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="to_add_packages">Click the Add button to add packages.</string>
    <string name="latest_status">Latest status:&#160;</string>
    <string-array name="package_status">
        <item>Query exception</item>
        <item>No record</item>
        <item>On the way</item>
        <item>Dispatch</item>
        <item>Have signed in</item>
        <item>User rejection</item>
        <item>Difficult parts</item>
        <item>Invalid single</item>
        <item>Timeout</item>
        <item>Failure to sign in</item>
        <item>return</item>
        <item>Inquire</item>
    </string-array>
    <!--package list page end-->

    <string name="searchSomeday">Search for a day</string>

    <!--search-->
    <string name="no_result">NO RESULT</string>
    <string name="search_hint">Package or company…</string>
    <string name="search_label_package">PACKAGE</string>
    <string name="search_label_company">COMPANY</string>
    <string name="item_loading">Loading…</string>
    <!--search end-->

    <!--About-->
    <string name="version">Version</string>
    <string name="rate">Rate</string>
    <string name="rate_desc">If you like the Espresso app, please do rate it.</string>
    <string name="licenses">Licenses</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_1">FengGo</string>
    <string name="thanks_1_desc">Package Tracker Project</string>
    <string name="thanks_1_url">https://github.com/fython/PackageTracker</string>
    <string name="thanks_2">+Youlun Zhai</string>
    <string name="thanks_2_desc">Poster designer</string>
    <string name="thanks_2_url">https://plus.google.com/+YoulunZhai</string>
    <string name="source_code">GitHub Source code</string>
    <string name="source_code_desc">https://github.com/TonnyL/Espresso</string>
    <string name="support">Support</string>
    <string name="send_advices">Send advices</string>
    <string name="mail_account">mailto:marktonymengyi@gmail.com</string>
    <string name="mail_topic">Espresso Advices</string>
    <string name="send_advices_desc">Help me improve this app.</string>
    <string name="donate">Donate</string>
    <string name="donate_account">marktonymengyi@gmail.com</string>
    <string name="donate_desc">Buy me a cup of coffee to keep me awake during my night coding sessions.</string>
    <string name="donate_msg">Alipay account will be copied to clipboard. Launch Alipay and paste it to finish donating. Thanks for support!</string>
    <string name="set_end_time_error">Start time can not be same as end time.</string>
    <string name="notification_new_message">\"The package has a new message\"</string>
    <!--About end-->

    <!--custom tabs-->
    <string name="error_no_browser">No browser installed on the device.</string>
    <!--custom tabs end-->

    <!--package details-->
    <string name="package_status">PACKAGE STATUS</string>
    <string name="company_name">Company Name</string>
    <string name="package_number">Package Number</string>
    <string name="package_name">Package Name</string>
    <string name="delete_package_massage">You will not continue track this package.</string>
    <string name="deliver_man">Deliver man</string>
    <string name="edit_name">Edit Name</string>
    <string name="input_empty">The package name can not be empty!</string>
    <!--package details end-->

</resources>
