<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preferences_about">
    <PreferenceCategory android:title="@string/nav_about">
        <Preference
            android:key="version"
            android:summary="%s"
            android:title="@string/version" />
        <Preference
            android:key="rate"
            android:summary="@string/rate_desc"
            android:title="@string/rate" />
        <Preference
            android:key="licenses"
            android:title="@string/licenses" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/thanks">
        <Preference
            android:key="thanks_1"
            android:summary="@string/thanks_1_desc"
            android:title="@string/thanks_1" />
        <Preference
            android:key="thanks_2"
            android:summary="@string/thanks_2_desc"
            android:title="@string/thanks_2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/support">
        <Preference
            android:key="source_code"
            android:summary="@string/source_code_desc"
            android:title="@string/source_code" />
        <Preference
            android:key="send_advices"
            android:summary="@string/send_advices_desc"
            android:title="@string/send_advices" />
        <Preference
            android:key="donate"
            android:summary="@string/donate_desc"
            android:title="@string/donate" />
    </PreferenceCategory>

</PreferenceScreen>