<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history_today"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/historyToday" />
        <item
            android:id="@+id/nav_express"
            android:icon="@drawable/ic_express_black_24dp"
            android:title="@string/express" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather_black_24dp"
            android:title="@string/weather" />
    </group>
    <group
        android:id="@+id/second_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_switch_theme"
            android:icon="@drawable/ic_brightness_6_black_24dp"
            android:title="@string/nav_switch_theme" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
    </group>
</menu>