<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">
        <!-- 在AppBarLayout加上android:fitsSystemWindows="true" 状态栏就会变透明，而不加反而会不透明而是colorPrimary的颜色 -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/banner_background_add"
            app:contentScrim="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:background="@color/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbarFadeDuration="1"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondaryText"
                    app:counterEnabled="true"
                    app:counterMaxLength="24"
                    app:counterTextAppearance="@style/InputTextLayoutCounterStyle"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_dialpad_black_24dp"
                        android:drawableTint="@color/colorPrimaryText"
                        android:hint="@string/tint_package_number"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/colorPrimaryText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewScanCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/scan_code"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondaryText"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_assignment_black_24dp"
                        android:drawableTint="@color/colorPrimaryText"
                        android:hint="@string/tint_package_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorSecondaryText" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/activity_add_package"
        android:tint="@android:color/white"
        android:transitionName="fabShare"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_done_white_24dp" />
</android.support.design.widget.CoordinatorLayout>